package IM.Message;
import "IM.BaseDefine.proto";
option java_package = "com.bonade.xxp.xqc_android_im.protobuf";
option optimize_for = LITE_RUNTIME;

//service id  0x0003
message IMMsgData{
	//cmd id:		0x0301
	
	optional string sessionId = 1;
	optional string fromUserId = 2;
//消息发送方
	
	optional string fromUserNickName = 3;	
	
	optional string fromUserLogo = 4;
	
	optional string toUserId = 5;	                                                //消息接受方
	
	optional string groupId = 6;
	
	optional string groupName = 7;
	
	optional string groupLogo = 8;
	
	optional int32 groupCount = 9;
	
optional string msgId = 10;
	
	optional string msgContent = 11;
	
	optional int32 msgType= 12;                                                     //消息类型 1、私聊 2、群聊
	
	optional string sendTime = 13;

	optional int32 msgContentType = 14;                                        //消息内容类型，1：文字 2：图片 3：提示
	optional int64 timestamp = 15;
}

message IMMsgDataAck{
	//cmd id:		0x0302
	required string sessionId = 1;	
	required string msgId = 2;
	required string fromUserId = 3;
	required string toUserId = 4;
	optional string groupId = 5; 
	required int64 timestamp = 6;
	required int32 result = 7;	
}

message IMMsgDataReadAck{
	//cmd id:		0x0303
	required uint32 user_id = 1;			//发送此信令的用户id
	required uint32 session_id = 2;			
	required uint32 msg_id = 3;
	required IM.BaseDefine.SessionType session_type = 4;
}

message IMMsgDataReadNotify{
	//cmd id:		0x0304
	required uint32 user_id = 1;			//发送此信令的用户id
	required uint32 session_id = 2;		
	required uint32 msg_id = 3;
	required IM.BaseDefine.SessionType session_type = 4;
}

message IMClientTimeReq{
	//cmd id:		0x0305
}

message IMClientTimeRsp{
	//cmd id:		0x0306
	required uint32 server_time = 1;
}

message IMUnreadMsgCntReq{
	//cmd id:		0x0307
	required uint32 user_id = 1;
	optional bytes attach_data = 20;	
}

message IMUnreadMsgCntRsp{
	//cmd id:		0x0308
	required uint32 user_id = 1;
	required uint32 total_cnt = 2;
	repeated IM.BaseDefine.UnreadInfo unreadinfo_list = 3;
	optional bytes attach_data = 20;
}

message IMGetMsgListReq{
	//cmd id:		0x0309
	required uint32 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint32 session_id = 3;
	required uint32 msg_id_begin = 4;
	required uint32 msg_cnt = 5;
	optional bytes attach_data = 20;
}

//对于群而言，如果消息数目返回的数值小于请求的cnt,则表示群的消息能拉取的到头了，更早的消息没有权限拉取。
//如果msg_cnt 和 msg_id_begin计算得到的最早消息id与实际返回的最早消息id不一致，说明服务器消息有缺失，需要
//客户端做一个缺失标记，避免下次再次拉取。
message IMGetMsgListRsp{
	//cmd id:		0x030a
	required uint32 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint32 session_id = 3;
	required uint32 msg_id_begin = 4;
	repeated IM.BaseDefine.MsgInfo msg_list = 5;
	optional bytes attach_data = 20;
}

message IMGetLatestMsgIdReq{
	//cmd id: 		0x030b
	required uint32 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint32 session_id = 3;
	optional bytes attach_data = 20;
}

message IMGetLatestMsgIdRsp{
	//cmd id:		0x030c
	required uint32 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint32 session_id = 3;
	required uint32 latest_msg_id = 4;
	optional bytes attach_data = 20;
}

message IMGetMsgByIdReq{
	//cmd id: 		0x030d
	required uint32 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint32 session_id = 3; 
	repeated uint32 msg_id_list = 4;
	optional bytes attach_data = 20;
}

message IMGetMsgByIdRsp{
	//cmd id:		0x030e
	required uint32 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint32 session_id = 3;
	repeated IM.BaseDefine.MsgInfo msg_list = 4;
	optional bytes attach_data = 20;
}
